bust spam, footer overlap fix

--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,17 @@ html {
     }
 }
 
+@media (max-height: 45rem) {
+    footer {
+        position:relative !important;
+    }
+}
+@media only screen and (min-width: 2560px) and (max-height: 60rem) {
+    footer {
+        position:relative !important;
+    }
+}
+
 :root {
     --bg-color: white;
     --font-color: black;
@@ -92,6 +103,7 @@ footer {
     text-align: center;
     padding: 0.625rem; /* 10px */
     background-color: black;
+    margin-top:1.25rem;
 }
 #footer-wrapper {
     display: flex;
