--- a/css/spiel.css
+++ b/css/spiel.css
@@ -1,4 +1,3 @@
-/* TODO: Media queries */
 body {
     background-color: var(--bg-color);
     color: var(--font-color);
@@ -120,6 +119,7 @@ body {
     justify-content: center;
     gap: 1.25rem;
     margin-top: 3.125rem;
+    margin-bottom: 10rem;
 }
 .history-table {
     margin-top: 3.125rem;
